kubernetes/apps/monitoring/otel-collector/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: otel-collector-targetallocator-ambient
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: opentelemetry-targetallocator
      app.kubernetes.io/instance: monitoring.otel-collector
      app.kubernetes.io/managed-by: opentelemetry-operator
      app.kubernetes.io/part-of: opentelemetry
  policyTypes: [Egress]
  egress:
    - ports:
        - port: 15008
          protocol: TCP
